# mlops-movie-recommendation

./: .dockerignore  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.airflow  Dockerfile.api  Dockerfile.dashboard  GCS_MODEL_SETUP.md  GUIDE.md  docker-compose.api.yml  docker-compose.gcs.yml  docker-compose.monitoring.yml  docker-compose.simple.yml  docker-compose.yml  docker-run.sh  health-check.sh  oceanic-hash-461113-m7-5016a3d0b291.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_api_with_gcs.sh  start_api.sh  start_dashboard.sh  start_monitoring.sh
.dvc/: config
.github/workflows/: ci.yml  mlops-pipeline.yml
.streamlit/: config.toml
airflow/: doc.md  docker-compose.yaml
airflow/dags/: movie_data_pipeline_dag.py  movie_mlops_pipeline_dag.py
data/processed/: processed_movies.parquet  processed_movies_report.txt
models/: .gitignore  content_based.dvc
models/content_based/: movie_mappings.pkl  movie_metadata.pkl  tfidf_matrix.pkl  tfidf_vectorizer.pkl  training_report.txt
monitoring/: README.md  model_metrics.json  monitoring_report.md  prometheus.yml
src/api/: Dockerfile  README.md  api_service.py  config.py  entrypoint.sh  load_test.py  metrics.py  middleware.py  requirements.txt  test_client.py
src/dashboard/: mlops_dashboard.py
src/data/: airflow_fetch_movies.py  airflow_process_movies.py  database_manager.py  fetch_data.py  preprocess_data.py
src/models/: model_inference.py  train_model.py
tests/: conftest.py  load_movies.py  test_api.py  test_database.py
(+4 files in other folders)
