[tool.black]
line-length = 88
exclude = '^(venv|\.venv|\.git|dist|build)/.*$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
skip_gitignore = true

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "UP"]
ignore = []
exclude = ["venv", ".venv", "build", "dist"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
