[tool.black]
line-length = 88
exclude = '^(venv|\.venv|\.git|dist|build)/.*$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
skip_gitignore = true

[tool.ruff]
line-length = 88
exclude = ["venv", ".venv", "build", "dist"]

# Temporary: disable import sorting since isort is used. Other rules disabled.
[tool.ruff.lint]
select = []
ignore = ["I"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
